--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,60 +1,66 @@
 <section class="hero">
-    <div class="container hero-container">
-      <div class="hero-row-reverse-box">
-       <div>
-        <h1 class="global-title hero-global-title">Reviving the traditional<span> Ukrainian</span>  artistry in every stitch.</h1>
-            <div class="hero-btn-box">
-       <a class="hero-btn link" href="#Yourorder">Order <svg class="hero-btn-icon" width="26" height="16">
-        <use href="./img/symbol-defs.svg#icon-untitled"></use>
-        </svg></a> 
-      </div>  
-    </div>
-          
-        
-        <picture class="hero-picture">
-          <source
-            srcset="./img/hero/girl-mob.jpeg 1x, ./img/hero/girl-mob@2x.jpeg 2x"
-            media="(max-width: 767px)"
-          />
-          <source
-            srcset="./img/hero/Girl-tab.jpeg 1x, ./img/hero/Girl-tab@2x.jpeg 2x"
-            media="(min-width: 768px)"
-          />
-          <source
-            srcset="./img/hero/girl-desctop.jpeg 1x, ./img/hero/girl-desctop@2x.jpeg 2x"
-            media="(min-width: 1280px)"
-          />       
-          
-          <img
-            src="./img/hero/girl-desctop.jpeg"
-            alt="Girl"
-            width="392"
-            height="545"
-            class="hero-global-img"
-            loading="lazy" 
-            
-          />
-      
-        </picture>
+  <div class="container hero-container">
+    <div class="hero-row-reverse-box">
+      <div>
+        <h1 class="global-title hero-global-title">
+          Reviving the traditional<span> Ukrainian</span> artistry in every
+          stitch.
+        </h1>
+        <div class="hero-btn-box">
+          <a class="hero-btn link" href="#Yourorder"
+            >Order
+            <svg class="hero-btn-icon" width="26" height="16">
+              <use href="./img/symbol-defs.svg#icon-untitled"></use>
+            </svg>
+          </a>
+        </div>
       </div>
-      
-        <div class="hero-text-box"><svg class="hero-icon" width="52" height="51">
-        <use href="../img/symbol-defs.svg#icon-sun"></use>
-        </svg>
-        <p class=" text hero-text">all embroidery is made by hand</p>
-      </div>
-        <img
-              srcset="./img/hero/Group-desctop.png 1x, ./img/hero/Group-desctop@2x.png 2x"
-                src="./img/hero/Group.png"
-                alt="Group"
-                width="157"
-                height="191"
-                class="hero-img"
-                loading="lazy" 
-              />
-            
-      
-    </div>
-</section>        
 
-      
+      <picture class="hero-picture">
+        <source
+          srcset="./img/hero/girl-mob.jpeg 1x, ./img/hero/girl-mob@2x.jpeg 2x"
+          media="(max-width: 767px)"
+        />
+        <source
+          srcset="./img/hero/Girl-tab.jpeg 1x, ./img/hero/Girl-tab@2x.jpeg 2x"
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="
+            ./img/hero/girl-desctop.jpeg    1x,
+            ./img/hero/girl-desctop@2x.jpeg 2x
+          "
+          media="(min-width: 1280px)"
+        />
+
+        <img
+          src="./img/hero/girl-desctop.jpeg"
+          alt="Girl"
+          width="392"
+          height="545"
+          class="hero-global-img"
+          loading="lazy"
+        />
+      </picture>
+    </div>
+
+    <div class="hero-text-box">
+      <svg class="hero-icon" width="52" height="51">
+        <use href="../img/symbol-defs.svg#icon-sun"></use>
+      </svg>
+      <p class="text hero-text">all embroidery is made by hand</p>
+    </div>
+    <img
+      srcset="
+        ./img/hero/Group-desctop.png    1x,
+        ./img/hero/Group-desctop@2x.png 2x
+      "
+      src="./img/hero/Group.png"
+      alt="Group"
+      width="157"
+      height="191"
+      class="hero-img"
+      loading="lazy"
+    />
+  </div>
+</section>
