--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,9 +1,9 @@
-<section class="about-us container about-container">
-  <div class="about-us-group">
+<section class="about-us">
+  <div class=" about-us-group container about-container">
     <div class="about-group-text">
       <h2 class="title">About Us</h2>
       <ul class="about-list">
-        <li class="about-text">
+        <li>
           <p class="text">
             The store "Vyshyvanka Vibes" is a place where traditional Ukrainian
             vyshyvanka comes to life with new zest and style. Our store offers a
@@ -11,7 +11,7 @@
             combines the elegance of traditional needlework and modern design.
           </p>
         </li>
-        <li class="about-text">
+        <li>
           <p class="text">
             In "Vyshyvanka Vibes" you will find various models of embroidery,
             from classic to modern, corresponding to the latest fashion trends.
@@ -26,22 +26,26 @@
         </li>
       </ul>
     </div>
-   <!-- <picture>
+   <picture>
         <source
         srcset="../img/girl-and-boy-desctop.jpeg 1x, ../img/girl-and-boy-desctop@2x.jpeg 2x"
           media="(min-width: 1440px)"
+          width="709" height="545"
         />
         <source
           srcset="../img/girl-and-boy-desctop-small.jpeg 1x, ../img/girl-and-boy-desctop-small@2x.jpeg 2x"
           media="(min-width: 1280px)"
+          width="594" height="545"
         />
         <source
           srcset="../img/girl-and-boy-tab.jpeg 1x, ../img/girl-and-boy-tab@2x.jpeg 2x"
           media="(min-width: 768px)"
+          width="704" height="545"
         />
         <source
          srcset="../img/girl-and-boy-mob.jpeg 1x, ../img/girl-and-boy-mob@2x.jpeg 2x"
           media="(max-width: 767px)"
+          width="335" height="499"
         />
         <img
         class="about-img-inner"
@@ -51,45 +55,7 @@
           width="709"
           height="545"
         />
-      </picture> -->
+      </picture>
     <picture>
-      <source
-        srcset="
-          ./img/girl-and-boy-desctop.jpeg    1x,
-          ./img/girl-and-boy-desctop@2x.jpeg 2x
-        "
-        media="min-width: 1440px"
-        loading="lazy"
-      />
-      <source
-        srcset="
-          ./img/girl-and-boy-desctop-small.jpeg    1x,
-          ./img/girl-and-boy-desctop-small@2x.jpeg 2x
-        "
-        media="min-width: 1280px"
-      />
-      <source
-        srcset="
-          ./img/girl-and-boy-tab.jpeg    1x,
-          ./img/girl-and-boy-tab@2x.jpeg 2x
-        "
-        media="min-width: 768px"
-      />
-      <source
-        srcset="
-          ./img/girl-and-boy-mob.jpeg    1x,
-          ./img/girl-and-boy-mob@2x.jpeg 2x
-        "
-        media="min-width: 375px"
-      />
-      <img
-        class="about-img-inner"
-        src="./img/girl-and-boy-mob.jpeg"
-        alt="Embroidered ornament shirt "
-        width="335"
-        height="499"
-        loading="lazy"
-      />
-    </picture>
   </div>
 </section>
