--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -1,4 +1,4 @@
-<section class="testimonials">
+<section class="testimonials" id="testimonials">
   <div class="testimonials__inner container">
     <h2 class="testimonials__title title">Testimonials</h2>
     <ul class="testimonials__list">
