--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -1,4 +1,4 @@
-<section class="your-order">
+<section class="your-order" id="customer-order">
   <div class="background-image-girl"></div>
   <div class="container your-order-main">
     <div class="image-your-order">
