--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,9 +1,6 @@
 /* HEADER */
 
 .header {
-  flex-grow: 1;
-  padding: 31px 20px 57px 20px;
-  background-color: #1c2225;
 }
 
 .mobile-menu {
@@ -14,9 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-height: 44px;
-  max-width: 375px;
-  margin: 0 auto;
+  margin-top: 18px;
 }
 
 .header .container-container {
@@ -48,12 +43,11 @@
 }
 
 .header-menu-link {
-  color: var(--white, #fcf9f9);
-  font-family: Manrope;
+  color: #fcf9f9;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.29; /* 128.571% */
+  line-height: 1.28;
   text-transform: uppercase;
   text-decoration: none;
 }
@@ -168,6 +162,20 @@
   opacity: 1;
 }
 
+.image-container{
+    position: relative;
+    height: 0;
+    padding-bottom: 100%;
+    overflow: hidden;
+}
+
+.bottom-image {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+
 .mob-address-link {
   display: flex;
   padding: 12px 20px;
@@ -191,7 +199,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-bottom: 186px;
+  margin-bottom: 150px;
 }
 
 .mob-address-item {
@@ -249,7 +257,9 @@
   flex-direction: column;
   align-items: flex-end;
   gap: 20px;
-  margin-bottom: 185px;
+  margin-bottom: auto;
+  margin-top: auto;
+ 
 }
 
 .menu-link {
@@ -274,14 +284,6 @@
 }
 
 @media (min-width: 768px) {
-  .header-container {
-    max-width: 768px;
-  }
-
-  .header {
-    padding: 20px 32px 80px;
-  }
-
   .header .header-container {
     height: 52px;
     justify-content: center;
@@ -300,27 +302,26 @@
   }
 
   .mob-address-menu {
-    margin-bottom: 223px;
+   
   }
 
   .mob-header-menu {
-    margin-bottom: 222px;
+   
   }
 }
+
 @media (min-width: 1280px) {
   .header .header-container {
     justify-content: space-between;
   }
 
   .header {
-    padding: 20px 100px 100px;
   }
 
   .burger {
     display: none;
   }
   .header-container {
-    max-width: 1280px;
   }
 
   .header-menu {
@@ -359,7 +360,6 @@
 
 @media (min-width: 1440px) {
   .header-container {
-    max-width: 1440px;
   }
 
   .header {
