--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,4 +1,4 @@
-<section class="about-us">
+<section class="about-us" id="about-us">
   <div class=" about-us-group container about-container">
     <div class="about-group-text">
       <h2 class="title">About Us</h2>
