--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,67 +1,24 @@
-<footer>
+<footer class="footer">
   <div class="container-footer container">
-    <div class="social-footer-container">
-      <ul class="menu list">
-        <li class="menu-item link">
-          <a class="footer-link-class link" href="#about-us">About us</a>
-        </li>
-        <li class="menu-item link">
-          <a class="footer-link-class link" href="#our-collection"
-            >Our collection
-          </a>
-        </li>
-        <li class="menu-item link">
-          <a class="footer-link-class link" href="#customer-order"
-            >Customer order</a
-          >
-        </li>
-        <li class="menu-item link">
-          <a class="footer-link-class link" href="#testimonials"
-            >Testimonials</a
-          >
-        </li>
-      </ul>
-    </div>
+    <ul class="menu">
+      <li class="footer-item">
+        <a class="header-menu-link link" href="#about-us">About us</a>
+      </li>
+      <li class="footer-item">
+        <a class="header-menu-link link" href="#our-collection">Our collection</a>
+      </li>
+      <li class="footer-item">
+        <a class="header-menu-link link" href="#customer-order">Customer order</a>
+      </li>
+      <li class="footer-item">
+        <a class="header-menu-link link" href="#testimonials">Testimonials</a>
+      </li>
+    </ul>
     <div class="container-footer-div">
-      <h3 class="footer-paragraph-text">
-        A touch of <span class="ukrainian-span">Ukrainian</span> culture in
+      <h3 class="global-title title-footer">
+        A touch of <span class="ukrainian-span title-footer ">Ukrainian</span> culture in
         every embroidery
       </h3>
     </div>
-    <picture class="ornament-picture">
-      <source
-        srcset="./img/ornament-footer-desctop.png"
-        media="(min-width: 1440px)"
-      />
-      <source
-        srcset="
-          ./img/ornament-footer-desctop-small.png    1x,
-          ./img/ornament-footer-desctop-small@2x.png 2x
-        "
-        media="(min-width: 1280px)"
-      />
-      <source
-        srcset="
-          ./img/ornament-footer-tab.png    1x,
-          ./img/ornament-footer-tab@2x.png 2x
-        "
-        media="(min-width: 768px)"
-      />
-      <source
-        srcset="
-          ./img/ornament-footer-mob.png    1x,
-          ./img/ornament-footer-mob@2x.png 2x
-        "
-        media="(max-width: 767px)"
-      />
-      <img
-        src="./img/ornament-footer-desctop.png"
-        loading="lazy"
-        alt="Ornament"
-        width="595"
-        height="528"
-        class="picture"
-      />
-    </picture>
   </div>
 </footer>
