--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <!-- ---------------H-e-a-d-e-r----------------- -->
 
 <header class="header">
-  <div class="header-container">
+  <div class="header-container container">
     <img
       class="logo-img"
       src="../img/logo.svg"
@@ -12,23 +12,27 @@
     <nav class="header-navigation">
       <ul class="header-menu">
         <li class="header-menu-item">
-          <a class="header-menu-link" href="#">About us</a>
+          <a class="header-menu-link link" href="#about-us">About us</a>
         </li>
         <li class="header-menu-item">
-          <a class="header-menu-link" href="#">Our collection </a>
+          <a class="header-menu-link link" href="#our-collection"
+            >Our collection
+          </a>
         </li>
         <li class="header-menu-item">
-          <a class="header-menu-link" href="#">CUSTOMER ORDER</a>
+          <a class="header-menu-link link" href="#customer-order"
+            >CUSTOMER ORDER</a
+          >
         </li>
         <li class="header-menu-item">
-          <a class="header-menu-link" href="#">TEstimonials</a>
+          <a class="header-menu-link link" href="#testimonials">TEstimonials</a>
         </li>
       </ul>
     </nav>
     <address class="address">
       <ul class="address-menu">
         <li class="address-item">
-          <a class="address-link" href="tel:+380684439426"
+          <a class="address-link link" href="tel:+380684439426"
             >+380 (68) 443-94-26</a
           >
         </li>
@@ -48,7 +52,7 @@
       </li>
       <li class="soc-item">
         <a
-          class="soc-link"
+          class="soc-link link"
           href="https://www.instagram.com/goitclub/ "
           target="_blank"
           ><svg class="soc-icon" width="28" height="28">
@@ -58,7 +62,7 @@
       </li>
       <li class="soc-item">
         <a
-          class="soc-link"
+          class="soc-link link"
           href="https://www.youtube.com/c/GoIT "
           target="_blank"
           ><svg class="soc-icon" width="28" height="28">
@@ -94,37 +98,43 @@
       <nav class="mob-header-navigation">
         <ul class="mob-header-menu">
           <li class="mob-header-menu-item">
-            <a class="menu-link" href="#">About us</a>
+            <a class="menu-link" href="#about-us">About us</a>
           </li>
           <li class="mob-header-menu-item">
-            <a class="menu-link" href="#">Our collection </a>
+            <a class="menu-link" href="#our-collection">Our collection </a>
           </li>
           <li class="mob-header-menu-item">
-            <a class="menu-link" href="#">CUSTOMER ORDER</a>
+            <a class="menu-link" href="#customer-order">CUSTOMER ORDER</a>
           </li>
           <li class="mob-header-menu-item">
-            <a class="menu-link" href="#">TEstimonials</a>
+            <a class="menu-link" href="#testimonials">TEstimonials</a>
           </li>
         </ul>
       </nav>
     </div>
-    <picture>
-      <source
-        srcset="./img/ornament-menu-tab.png 1x, img/ornament-menu-tab@2x.png 2x"
-        media="(min-width: 768px)"
-      />
-      <source
-        srcset="./img/ornament-menu-mob.png 1x, img/ornament-menu-mob@2x.png 2x"
-        media="(max-width: 767px)"
-      />
-      <img
-        src="./img/ornament-menu-mob.png"
-        alt="Ornament"
-        class="mobile-ornament"
-        width="340px"
-        height="302px"
-      />
-    </picture>
+    <div image-container>
+      <picture class="bottom-image">
+        <source
+          srcset="
+            ./img/ornament-menu-tab.png  1x,
+            img/ornament-menu-tab@2x.png 2x
+          "
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="
+            ./img/ornament-menu-mob.png  1x,
+            img/ornament-menu-mob@2x.png 2x
+          "
+          media="(max-width: 767px)"
+        />
+        <img
+          src="./img/ornament-menu-mob.png"
+          alt="Ornament"
+          class="mobile-ornament"
+        />
+      </picture>
+    </div>
     <script src="./js/menu.js"></script>
   </div>
 </header>
