--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -1,5 +1,5 @@
 <!-- section Our collection -->
-<section class="collection">
+<section class="collection" id="our-collection">
   <div class="container">
     <h2 class="title title-position">Our collection</h2>
     <ul class="collection-list">
